--- a/Exercicios/EX024/fundo006.html
+++ b/Exercicios/EX024/fundo006.html
@@ -7,15 +7,26 @@
     <title>site xd</title>
     <style>
         body{
+            /*
             background-color: #000;
             background-image: url(assets/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+            */
+            /*shorthand background
+            color > image > position > repeat > [size] > attachment
+            */
+
+            background: #000 url(assets/wallpaper002.jpg) center center no-repeat fixed;
+            background-size: cover;
+
         }
+
         main{
             background-color: #fff;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,6 +39,18 @@
     <main>
         <h1> teste xd</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur beatae quis placeat vero dolorem, architecto similique dolor molestiae expedita! Dolorem tempora impedit ducimus vitae, magnam quaerat deleniti labore totam explicabo Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores temporibus delectus, consequatur, odit voluptatem sunt iusto repellendus autem vel corrupti ipsum magni repellat rerum ducimus maxime id dolorem reprehenderit eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quas excepturi tempora cumque, vitae eaque. Reiciendis pariatur nihil nisi impedit quisquam nam iure modi perspiciatis labore, quidem, amet rem omnis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur beatae quis placeat vero dolorem, architecto similique dolor molestiae expedita! Dolorem tempora impedit ducimus vitae, magnam quaerat deleniti labore totam explicabo Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores temporibus delectus, consequatur, odit voluptatem sunt iusto repellendus autem vel corrupti ipsum magni repellat rerum ducimus maxime id dolorem reprehenderit eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quas excepturi tempora cumque, vitae eaque. Reiciendis pariatur nihil nisi impedit quisquam nam iure modi perspiciatis labore, quidem, amet rem omnis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur beatae quis placeat vero dolorem, architecto similique dolor molestiae expedita! Dolorem tempora impedit ducimus vitae, magnam quaerat deleniti labore totam explicabo Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores temporibus delectus, consequatur, odit voluptatem sunt iusto repellendus autem vel corrupti ipsum magni repellat rerum ducimus maxime id dolorem reprehenderit eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quas excepturi tempora cumque, vitae eaque. Reiciendis pariatur nihil nisi impedit quisquam nam iure modi perspiciatis labore, quidem, amet rem omnis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur beatae quis placeat vero dolorem, architecto similique dolor molestiae expedita! Dolorem tempora impedit ducimus vitae, magnam quaerat deleniti labore totam explicabo Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores temporibus delectus, consequatur, odit voluptatem sunt iusto repellendus autem vel corrupti ipsum magni repellat rerum ducimus maxime id dolorem reprehenderit eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quas excepturi tempora cumque, vitae eaque. Reiciendis pariatur nihil nisi impedit quisquam nam iure modi perspiciatis labore, quidem, amet rem omnis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur beatae quis placeat vero dolorem, architecto similique dolor molestiae expedita! Dolorem tempora impedit ducimus vitae, magnam quaerat deleniti labore totam explicabo Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores temporibus delectus, consequatur, odit voluptatem sunt iusto repellendus autem vel corrupti ipsum magni repellat rerum ducimus maxime id dolorem reprehenderit eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quas excepturi tempora cumque, vitae eaque. Reiciendis pariatur nihil nisi impedit quisquam nam iure modi perspiciatis labore, quidem, amet rem omnis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur beatae quis placeat vero dolorem, architecto similique dolor molestiae expedita! Dolorem tempora impedit ducimus vitae, magnam quaerat deleniti labore totam explicabo Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores temporibus delectus, consequatur, odit voluptatem sunt iusto repellendus autem vel corrupti ipsum magni repellat rerum ducimus maxime id dolorem reprehenderit eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quas excepturi tempora cumque, vitae eaque. Reiciendis pariatur nihil nisi impedit quisquam nam iure modi perspiciatis labore, quidem, amet rem omnis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur beatae quis placeat vero dolorem, architecto similique dolor molestiae expedita! Dolorem tempora impedit ducimus vitae, magnam quaerat deleniti labore totam explicabo Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores temporibus delectus, consequatur, odit voluptatem sunt iusto repellendus autem vel corrupti ipsum magni repellat rerum ducimus maxime id dolorem reprehenderit eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quas excepturi tempora cumque, vitae eaque. Reiciendis pariatur nihil nisi impedit quisquam nam iure modi perspiciatis labore, quidem, amet rem omnis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur beatae quis placeat vero dolorem, architecto similique dolor molestiae expedita! Dolorem tempora impedit ducimus vitae, magnam quaerat deleniti labore totam explicabo Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores temporibus delectus, consequatur, odit voluptatem sunt iusto repellendus autem vel corrupti ipsum magni repellat rerum ducimus maxime id dolorem reprehenderit eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quas excepturi tempora cumque, vitae eaque. Reiciendis pariatur nihil nisi impedit quisquam nam iure modi perspiciatis labore, quidem, amet rem omnis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur beatae quis placeat vero dolorem, architecto similique dolor molestiae expedita! Dolorem tempora impedit ducimus vitae, magnam quaerat deleniti labore totam explicabo Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores temporibus delectus, consequatur, odit voluptatem sunt iusto repellendus autem vel corrupti ipsum magni repellat rerum ducimus maxime id dolorem reprehenderit eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quas excepturi tempora cumque, vitae eaque. Reiciendis pariatur nihil nisi impedit quisquam nam iure modi perspiciatis labore, quidem, amet rem omnis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur beatae quis placeat vero dolorem, architecto similique dolor molestiae expedita! Dolorem tempora impedit ducimus vitae, magnam quaerat deleniti labore totam explicabo Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores temporibus delectus, consequatur, odit voluptatem sunt iusto repellendus autem vel corrupti ipsum magni repellat rerum ducimus maxime id dolorem reprehenderit eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quas excepturi tempora cumque, vitae eaque. Reiciendis pariatur nihil nisi impedit quisquam nam iure modi perspiciatis labore, quidem, amet rem omnis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur beatae quis placeat vero dolorem, architecto similique dolor molestiae expedita! Dolorem tempora impedit ducimus vitae, magnam quaerat deleniti labore totam explicabo Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores temporibus delectus, consequatur, odit voluptatem sunt iusto repellendus autem vel corrupti ipsum magni repellat rerum ducimus maxime id dolorem reprehenderit eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quas excepturi tempora cumque, vitae eaque. Reiciendis pariatur nihil nisi impedit quisquam nam iure modi perspiciatis labore, quidem, amet rem omnis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur beatae quis placeat vero dolorem, architecto similique dolor molestiae expedita! Dolorem tempora impedit ducimus vitae, magnam quaerat deleniti labore totam explicabo Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores temporibus delectus, consequatur, odit voluptatem sunt iusto repellendus autem vel corrupti ipsum magni repellat rerum ducimus maxime id dolorem reprehenderit eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quas excepturi tempora cumque, vitae eaque. Reiciendis pariatur nihil nisi impedit quisquam nam iure modi perspiciatis labore, quidem, amet rem omnis.</p>
+
     </main>
 </body>
 </html>
